<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.cetis125.basedatos01.Altas">

    <Button
        android:id="@+id/btnAltRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Menu_principal"/>

    <TextView
        android:id="@+id/tv_altas_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Nombres"/>
    <EditText
        android:id="@+id/ed_altas_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    <TextView
        android:id="@+id/tv_altas_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Apellidos"/>
    <EditText
        android:id="@+id/ed_altas_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    <TextView
        android:id="@+id/tv_altas_fechaNac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_FechaNac"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_altas_fecha_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/txt_Dia"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_fecha_separador"/>
        <EditText
            android:id="@+id/ed_altas_fecha_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/txt_Mes"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_fecha_separador"/>
        <EditText
            android:id="@+id/ed_altas_fecha_anyo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/txt_Anyo"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_altas_calificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Calificacion"/>
    <EditText
        android:id="@+id/ed_altas_calificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/tv_altas_activo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Activo"/>
    <Switch
        android:id="@+id/sw_altas_activo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"/>
    <Button
        android:id="@+id/btn_altas_grabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Grabar"/>
</LinearLayout>
