<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.cetis125.basedatos01.Modificaciones">

    <Button
        android:id="@+id/btnModRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Menu_principal"/>
    <TextView
        android:id="@+id/tv_modificaciones_buscarid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Buscarid" />

    <EditText
        android:id="@+id/ed_modificaciones_buscarid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_modificaciones_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Buscar" />


    <LinearLayout
        android:id="@+id/ly_baja_campos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_modificaciones_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Nombres" />

        <EditText
            android:id="@+id/ed_modificaciones_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_modificaciones_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Apellidos" />

        <EditText
            android:id="@+id/ed_modificaciones_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/tv_modificaciones_fechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_FechaNac" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_modificaciones_fecha_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_Dia"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fecha_separador" />

            <EditText
                android:id="@+id/ed_modificaciones_fecha_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_Mes"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fecha_separador" />

            <EditText
                android:id="@+id/ed_modificaciones_fecha_anyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_Anyo"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_modificaciones_calificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Calificacion" />

        <EditText
            android:id="@+id/ed_modificaciones_calificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
        <TextView
            android:id="@+id/tv_modificaciones_activo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Activo"/>
        <Switch
            android:id="@+id/sw_modificaciones_activo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <Button
            android:id="@+id/btn_modificaciones_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Modificar" />
    </LinearLayout>
</LinearLayout>
