<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.cetis125.basedatos01.MenuBotones">

    <Button
        android:id="@+id/btnAltas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Altas"/>
    <Button
        android:id="@+id/btnBajas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Bajas"/>
    <Button
        android:id="@+id/btnModificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Modificaciones"/>
    <Button
        android:id="@+id/btnConsultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Consultas"/>

</LinearLayout>
